/*
 * Copyright The OpenTelemetry Authors
 * SPDX-License-Identifier: Apache-2.0
 */

syntax="proto3";

package jaeger.api_v2;

import "jaeger/api_v2/model.proto";

option java_package = "io.opentelemetry.exporter.jaeger.proto.api_v2";

message PostSpansRequest {
    Batch batch = 1;
}

message PostSpansResponse {
}

service CollectorService {
    rpc PostSpans(PostSpansRequest) returns (PostSpansResponse) {}
}
